@@ -1,2 +1,7 @@
+include *.rst
+
+recursive-include docs *
 recursive-include rg *
-global-exclude *pyc
+
+global-exclude *.pyc
+global-include *.mo
