@@ -49,9 +49,9 @@ The workflow transition triggers an email to be sent to the booker.
 ContentRules
 ============
 
-There are an additional contentrule that can be used to notify booking owner when his booking has benn rescheduled.
-
-There is a new trigger event for contentrules called "Booking moved" that will be triggered when a booking is rescheduled by an admin.
+There are an additional contentrule that can be used to notify booking owner when his booking has been rescheduled.
+There is a trigger event for contentrules called "Booking moved" that will be triggered when a
+booking is rescheduled by an admin.
 
 There is also a new action that allows to configure a mail that will be sent to the booking owner.
 
