@@ -1,4 +1,0 @@
-<div id="annullaspostaprenotazione"
-    tal:condition="view/display">
-    <a title="Annulla Spostamento" href="annullaSpostamento">Annulla Spostamento</a>
-</div>
