@@ -1,9 +1,0 @@
-<?xml version="1.0"?>
-
-<object name="portal_catalog" meta_type="Plone Catalog Tool">
-
-    <index name="getData_prenotazione" meta_type="DateIndex">
-        <indexed_attr value="getData_prenotazione" />
-    </index>
-
-</object>
