@@ -32,6 +32,7 @@ setup(name='rg.prenotazioni',
       zip_safe=False,
       install_requires=['setuptools',
                         'Products.DataGridField',
+                        'collective.contentrules.mailfromfield',
                         ],
       tests_require=tests_require,
       extras_require=dict(tests=tests_require),
